# A.T.O.M.

./: .dockerignore  .gitignore  Design System.md  Dockerfile  README.md  index.html  inference.py  mock_proxy.py  mock_server.py  models.py  openenv.yaml  pyproject.toml  test_submission.sh  tokens.json
atom_web/: README.md  index.html  package-lock.json  package.json
atom_web/src/: App.css  App.tsx
atom_web/src/components/: Button.tsx  CodeBlock.tsx  ConnectionDialog.tsx  DataBlock.tsx  DataTable.tsx  FeatureCard.tsx  Footer.tsx  MarqueeTape.tsx  Metric.tsx  MoleculeViewer.tsx  Navbar.tsx  SectionHeader.tsx  StatsGrid.tsx  Tag.tsx  TaskCard.tsx  TerminalInput.tsx  TerminalWindow.tsx
atom_web/src/data/: mockArchitecture.ts  mockChartData.ts  mockEpisode.ts  mockFragments.ts  mockTasks.ts
atom_web/src/hooks/: useAtomSession.ts
atom_web/src/lib/: atomClient.tsx
atom_web/src/pages/: Architecture.tsx  Docs.tsx  Environment.tsx  Landing.tsx  Playground.tsx  Tasks.tsx
atom_web/src/types/: index.ts
scripts/: check_proxy_inference.sh  verify_inference_logs.py
server/: README.md  app.py  atom_environment.py  auth.py  requirements.txt
server/chemistry/: engine.py  fragments.py  state_mapper.py
server/rubrics/: evaluator.py  trajectory.py
tests/: conftest.py  test_chemistry.py  test_environment.py  test_graders.py
